--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,9 @@
 
         <!-- Сортировка -->
 
-        <!-- Контент -->
+        <ul class="trip-events__list">
+          <!-- Контент -->
+        </ul>
       </section>
     </div>
   </main>
